syntax = "proto3";

option go_package = "./agent_proto";

package agent_proto;


service NginxService {
  rpc GetNginxInfo (GetNginxInfoRequest) returns (GetNginxInfoResponse) {}
}

message GetNginxInfoRequest {

}

message GetNginxInfoResponse {
  string message = 1;
  repeated NginxInstance nginxInstances = 2;
}

message NginxInstance{
  string configPath = 1;
  repeated NginxServerInfo servers = 2;
  NginxLog errorLog = 3;
  NginxLog accessLog = 4;
}

message NginxServerInfo {
  string serverName = 1;
  uint32 listen = 2;
  string root = 3;
  string serverAlias = 4;
  NginxLog errorLog = 5;
  NginxLog accessLog = 6;
}

message NginxLog{
  string filePath = 1;
  string size = 2;
  string modifyTime = 3;
}