syntax = "proto3";

option go_package = "./agent_proto";

package agent_proto;


/*
* 不对应http状态码，而是自定义的状态码
* 0: OK
* 2开头为警告(预留不一定使用)
* 4开头为调用方错误
* 5开头为服务端错误
*/

enum ResponseCode {
    OK = 0;
    PARAM_ERROR = 400;
    UNSUPPORTED = 401;
    SERVER_ERROR = 500;
    SERVER_CONFIG_ERROR = 501;
    UNKNOWN_SERVER_ERROR = 599;
}