syntax = "proto3";

option go_package = "./agent_proto";

package agent_proto;


service GetUserList {

  rpc GetUserList (UserListRequest) returns (UserListResponse) {}
}

message UserListRequest {

}

message UserListResponse {
  string message = 1;
  repeated UserInfo list = 2;
}


message UserInfo{
  string userName  = 1;
  string userID = 2;
  string UserType = 3;
  string groupID = 4;
  string groupName = 5;
  string comment = 6;
  string homeDir = 7;
  string shell = 8;
  string lastLoginTime = 9;
  string status = 10;
}